<resources>
    <string name="app_name">IT-eBook</string>
    <string name="loading_finished">数据加载完毕</string>
    <string name="loading_failed">数据加载失败</string>
    <string name="loading_success">加载了%1$d本书哦</string>
    <string name="load_more">要加载更多书哦</string>
    <string name="title_Android">Android</string>
    <string name="title_Python">Python</string>
    <string name="title_Java">Java</string>
    <string name="title_Mysql">Mysql</string>
    <string name="title_PHP">PHP</string>
    <string name="title_JavaScript">JavaScript</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="book_description">Book Description</string>
    <string name="book_details">Book Details</string>
    <string name="book_ebook">eBook</string>
    <string name="book_publisher">Publisher:</string>
    <string name="book_author">Author:</string>
    <string name="book_year">Year:</string>
    <string name="book_pages">Pages:</string>
    <string name="book_isbn">ISBN:</string>
    <string name="book_title">Title:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_mark">Tim.Cui</string>
    <string name="nav_setting">偏好设置</string>
    <string name="nav_manage">下载管理</string>
    <string name="nav_about">关于应用</string>
    <string name="nav_search">我要搜书</string>
    <string name="press_back_again">再按一次退出应用</string>
    <string name="no_book">没有书籍</string>
    <string name="no_search_result">这里空空如也</string>
    <string name="download">Download</string>
    <string name="tip">提示</string>
    <string name="ok">好</string>
    <string name="go_to_download">确定要下载《%1$s》吗?</string>
    <string name="go_to_download_without_name">确定要下载这本书吗?</string>
    <string name="title_activity_book_detail2">BookDetailActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="referer">http://www.it-ebooks.info/book/%1$s/</string>
    <string name="download_file_folder_name">IT-eBook_Download</string>
    <string name="download_file_name">%1$s.pdf</string>
    <string name="TODO">敬请期待^_^</string>
    <string name="about">关于应用</string>
    <string name="introduction_key">introduction</string>
    <string name="author_key">author</string>
    <string name="current_version_key">current_version</string>
    <string name="github_key">github</string>
    <string name="sina_weibo_key">sina_weibo</string>
    <string name="email_key">email</string>
    <string name="introduction_title">应用介绍</string>
    <string name="author_title">作者</string>
    <string name="current_version_title">当前版本</string>
    <string name="github_title">我的Github</string>
    <string name="sina_weibo_title">我的新浪微博</string>
    <string name="email_title">我的邮箱</string>
    <string name="introduction_value">该项目基于 IT-eBook api 并开源，同时使用到Rx, Glide, Retrofit 等开源技术，UI设计基于Material Design的风格， 目前提供预置类别书籍的下载功能，同时将继续优化功能并提供自定义搜索书籍下载</string>
    <string name="author_value">Tim.Cui</string>
    <string name="github_value">https://github.com/cuikangyuan</string>
    <string name="sina_weibo_value">孩子不坑爹</string>
    <string name="email_value">cuikangyuan@outlook.com</string>
    <string name="version_not_found">哇，你用的是火星版本吧~</string>
    <string name="copy_finish">已经复制到剪切板啦</string>
    <string name="share_txt">欢迎使用“IT-eBook”，每天进步一点点，您可以在http://fir.im/41ud下载</string>
    <string name="share_app">分享-IT-eBook</string>
    <string name="share_title">分享给朋友</string>
    <string name="share_key">share</string>
    <string name="under_mobile_network">正在使用手机流量上网(￣.￣)</string>
    <string name="under_wifi">正在使用WIFI上网╮(￣▽￣)╭ </string>
    <string name="no_network">手机网络好像有点问题(︶︿︶)</string>
    <string name="download_complete">PDF下载成功</string>
    <string name="under_developing">功能尚在开发中</string>
    <string name="add_to_download_queue">后台开始下载</string>
    <string name="input_key_word">Git/Linux/C++...</string>
    <string name="speak_key_word">请说出关键字</string>
    <string name="download_success">已下载</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载</string>
    <string name="unknown">未知状态</string>
    <string name="no_download_item">暂无下载记录</string>
    <string name="activity_not_found">未找到打开该文件的应用</string>
    <string name="already_add_to_download">这本书正在下载哦</string>
    <string name="get_more">查看更多</string>
    <string name="no_more">没有更多了</string>
</resources>
