<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <group android:checkableBehavior="single">
        <item
            android:title="@string/nav_mark"/>
    </group>
    -->
    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search_24dp"
                android:title="@string/nav_search"/>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_manage_24dp"
                android:title="@string/nav_manage"/>
            <!--
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/nav_setting"/>
                -->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/nav_about"/>
        </menu>
    </item>
</menu>