<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:id="@+id/book_details_key"
        android:layout_below="@+id/book_description_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/book_details"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/book_publisher_key"
        android:layout_below="@+id/book_details_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_publisher"
        android:layout_marginTop="8dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/book_publisher_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O'Reilly Media"
        android:textSize="14sp"
        android:layout_alignTop="@+id/book_publisher_key"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/book_author_key"
        android:layout_below="@+id/book_publisher_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:layout_marginTop="8dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/book_author_value"
        android:maxEms="20"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Veronique Brossier"
        android:textSize="14sp"
        android:layout_alignTop="@+id/book_author_key"
        android:layout_alignStart="@+id/book_publisher_value" />


    <TextView
        android:id="@+id/book_isbn_key"
        android:layout_below="@+id/book_author_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_isbn"
        android:layout_marginTop="8dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/book_isbn_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="978-1-4493-9482-0"
        android:textSize="14sp"
        android:layout_alignTop="@+id/book_isbn_key"
        android:layout_alignStart="@+id/book_author_value" />

    <TextView
        android:id="@+id/book_year_key"
        android:layout_below="@+id/book_isbn_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_year"
        android:layout_marginTop="8dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/book_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2011"
        android:textSize="14sp"
        android:layout_alignTop="@+id/book_year_key"
        android:layout_alignStart="@+id/book_isbn_value" />


    <TextView
        android:id="@+id/book_pages_key"
        android:layout_below="@+id/book_year_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_pages"
        android:layout_marginTop="8dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/book_pages_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="222"
        android:textSize="14sp"
        android:layout_alignTop="@+id/book_pages_key"
        android:layout_alignStart="@+id/book_isbn_value" />
</RelativeLayout>